# wallpaper

./: .gitignore  Cargo.toml  README.md
src/: image_compressor.rs  main.rs
