[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
gpui = "0.2.2"
gpui-component = "0.5.1"
image = "0.25.10"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"
